HW architecture switch -> amd64